--- a/pt-BR/help_files/custom.html
+++ b/pt-BR/help_files/custom.html
@@ -9,16 +9,16 @@
 
 <!-- next: 58 -->
 
-<h2>Interactive help for Hesk settings</h2>
+<h3>Interactive help for Hesk settings</h3>
 
 <p>&nbsp;</p>
 
-<a name="41"></a><h3>Custom fields</h3>
+<a name="41"></a><span class="section">&raquo; Custom fields</span>
 
 <p>Custom fields can be used to collect additional information from your customers. You can enable up to 20 custom fields by selecting YES in the Enable column. Once a field is enabled you have several options to set.</p>
 
-<h4>Type</h4>
-<p>Choose field type. It can be one of the following options:</p>
+<p><b>&raquo; Type</b><br />
+Choose field type. It can be one of the following options:</p>
 
 <ul>
 <li><b>Text field</b> - a normal one-line text field (&lt;input type=&quot;text&quot;&gt;)</li>
@@ -28,17 +28,17 @@
 <li><b>Checkbox</b> - checkbox with at least two options (&lt;input type=&quot;checkbox&quot;&gt;). Multiple options can be chosen (ticked).</li>
 </ul>
 
-<h4>Required</h4>
-<p>Check to make the custom field a required, otherwise it is an optional one.</p>
+<p><b>&raquo; Required</b><br />
+Check to make the custom field a required, otherwise it is an optional one.</p>
 
-<h4>Field name</h4>
-<p>Give the custom field a unique name that what will be displayed next to the field, for example &quot;Postal address&quot;.</p>
+<p><b>&raquo; Field name</b><br />
+Give the custom field a unique name that what will be displayed next to the field, for example &quot;Postal address&quot;.</p>
 
-<h4>Location</h4>
-<p>Choose whether the custom field should be displayed before or after the &quot;Message&quot; field when submitting a new support ticket.</p>
+<p><b>&raquo; Location</b><br />
+Choose whether the custom field should be displayed before or after the &quot;Message&quot; field when submitting a new support ticket.</p>
 
-<h4>Options</h4>
-<p></p>Options you can set for each field depending on the selected Type:</p>
+<p><b>&raquo; Options</b><br />
+Options you can set for each field depending on the selected Type:</p>
 
 <ul>
 <li><b>Text field</b> - you can set maximum input length (in chars) and default value</li>
@@ -50,6 +50,21 @@
 <p>&nbsp;</p>
 
 <p align="center"><a href="#" onclick="Javascript:window.close()">Close window</a></p>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 
 </body>
 
