--- a/pt-BR/help_files/email.html
+++ b/pt-BR/help_files/email.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 
-<!-- next: 65 -->
+<!-- next: 68 -->
 
-<h2>Interactive help for Hesk settings</h2>
+<h3>Interactive help for Hesk settings</h3>
 
 <p>&nbsp;</p>
 
-<a name="55"></a><h3>Email sender</h3>
+<a name="55"></a><p class="title">Email sender</p>
 <p>Select wether HESK should send emails usign PHP mail() function or using a manually setup SMTP server.</p>
 
 <p>PHP mail() should work on most setups, if it doesn't you may try setting up a SMTP server instead.</p>
@@ -21,7 +21,7 @@
 <p>Available SMTP variables:</p>
 
 <p>
-<b>SMTP Host</b> - hostname of your SMTP server, usually <i>localhost</i> or <i>mail.yourdomain.com</i><br />
+<b>SMTP Host</b> - hostname of your SMTP server, usually <i>localhost</i> or <i>mail.example.com</i><br />
 <b>SMTP Port</b> - your SMTP port, usually 25<br />
 <b>SMTP Timeout</b> - SMTP timeout in seconds<br />
 <b>SSL Protocol</b> - enable if your SMTP server requires SSL protocol<br />
@@ -39,7 +39,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<a name="54"></a><h3>Email Piping</h3>
+<a name="54"></a><p class="title">Email Piping</p>
 
 <p>Enables email piping (creating tickets from emails).</p>
 
@@ -54,7 +54,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<a name="59"></a><h3>POP3 Fetching</h3>
+<a name="59"></a><p class="title">POP3 Fetching</p>
 
 <p>This setting enables or disables POP3 Fetching - creating tickets from emails by connecting to an email account using POP3 connection.
 
@@ -62,8 +62,12 @@
 
 <p>Available variables are:</p>
 
+<p><b>Task Timeout</b> - number of minutes to wait for an existing POP3 fetching job to
+complete. No new fetching jobs will start until the timeout is reached.
+Set to <b>0</b> to disable timeouts and always start a new fetching job.</p>
+
 <p>
-<b>POP3 Host</b> - hostname of your POP3 server, usually <i>mail.yourdomain.com</i><br />
+<b>POP3 Host</b> - hostname of your POP3 server, usually <i>mail.example.com</i><br />
 <b>POP3 Port</b> - your POP3 port, usually 110. Gmail for example uses 995<br />
 <b>TLS Protocol</b> - enable if your POP3 server requires TLS protocol<br />
 <b>Keep a copy</b> - if enabled HESK will <b>not</b> delete mail from POP3 server<br />
@@ -80,7 +84,37 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<a name="60"></a><h3>Email Loops</h3>
+<a name="67"></a><p class="title">IMAP Fetching</p>
+
+<p>This setting enables or disables IMAP Fetching - creating tickets from emails by connecting to an email account using IMAP connection.
+
+<p>For instructions on how to setup IMAP Fetching please see the readme.html file.</p>
+
+<p>Available variables are:</p>
+
+<p><b>Task Timeout</b> - number of minutes to wait for an existing IMAP fetching job to
+complete. No new fetching jobs will start until the timeout is reached.
+Set to <b>0</b> to disable timeouts and always start a new fetching job.</p>
+
+<p>
+<b>IMAP Host</b> - hostname of your IMAP server, usually <i>mail.example.com</i><br />
+<b>IMAP Port</b> - your IMAP port, usually 143 for non-encrypted and 993 for SSL/TLS<br />
+<b>Encryption</b> - set required IMAP encryption<br />
+<b>Keep a copy</b> - if enabled HESK will <b>not</b> delete mail from IMAP server<br />
+<b>IMAP Username</b> - your IMAP username<br />
+<b>IMAP Password</b> - your IMAP password<br />
+</p>
+
+<p>&nbsp;</p>
+
+<p align="center"><a href="#" onclick="Javascript:window.close()">Close window</a></p>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<a name="60"></a><p class="title">Email Loops</p>
 
 <p>Settings to help detect email loops created from autoresponders or undeliverable email.</p>
 
@@ -100,7 +134,7 @@ will be ignored by email piping.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<a name="62"></a><h3>Detect email typos</h3>
+<a name="62"></a><p class="title">Detect email typos</p>
 
 <p>This function will try to detect common email domain name misspelling and suggest a corrected version.</p>
 
@@ -111,7 +145,7 @@ user@<span style="color:green"><b>gmail.com</b></span> instead.</p>
 
 <p>&nbsp;</p>
 
-<a name="63"></a><h3>Email providers</h3>
+<a name="63"></a><p class="title">Email providers</p>
 
 <p>A list of common email providers your customers use. HESK will use this list to try to detect mistyped email addresses.</p>
 
@@ -128,7 +162,38 @@ user@<span style="color:green"><b>gmail.com</b></span> instead.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<a name="61"></a><h3>Strip quoted reply</h3>
+<a name="65"></a><p class="title">Notify customer when</p>
+
+<p>Select when HESK should send an email notification to customers:</p>
+
+<ul>
+<li><b>when customer submits a new support ticket</b><br /><br />
+Note: if ticket is submitted over email (email piping or POP3 fetching), HESK can
+skip sending new ticket notification to the customer if the email subject contains
+one of the tags listed in the text box (one tag per line).<br /><br />You can use this to prevent
+automatic replies to emails detected as possible SPAM by your server SPAM filter.<br />&nbsp;
+</li>
+<li><b>when a support ticket is marked as Resolved</b> (without replying)</li>
+</ul>
+
+<p>&nbsp;</p>
+
+<p>Note that notification preferences are set individually per ticket when staff replies to a ticket or when staff submits a ticket from the admin interface.</p>
+
+<p>&nbsp;</p>
+
+<p align="center"><a href="#" onclick="Javascript:window.close()">Close window</a></p>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<a name="61"></a><p class="title">Strip quoted reply</p>
 
 <p>This function deletes quoted replies from all customer emails before they are converted into a ticket using Email piping or POP3 Fetching.</p>
 
@@ -147,7 +212,22 @@ user@<span style="color:green"><b>gmail.com</b></span> instead.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<a name="64"></a><h3>Embedded files</h3>
+<a name="66"></a><p class="title">Require message</p>
+
+<p>If enabled, emails from email piping or POP3 fetching will be ignored if they contain no message.</p>
+
+<p>If disabled, even emails with no message will be turned into tickets.</p>
+
+<p>&nbsp;</p>
+
+<p align="center"><a href="#" onclick="Javascript:window.close()">Close window</a></p>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<a name="64"></a><p class="title">Embedded files</p>
 
 <p>Enable if you wish HESK to save embedded email files (for example embedded images) as attachments when importing tickets over Email piping or POP3 Fetching.</p>
 
@@ -165,7 +245,7 @@ and 3 embedded images, HESK will save the file attachment and first embedded ima
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<a name="57"></a><h3>Multiple emails</h3>
+<a name="57"></a><p class="title">Multiple emails</p>
 <p>If a customer tries to enter several emails (separated by comma) into the Email field when submitting a ticket HESK
 will only use the first email by default and ignore any other emails.</p>
 
@@ -180,7 +260,7 @@ will only use the first email by default and ignore any other emails.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<a name="50"></a><h3>Confirm email</h3>
+<a name="50"></a><p class="title">Confirm email</p>
 <p>If selected, the &quot;Submit a ticket&quot; form will show a &quot;Confirm email&quot;
 field forcing the customer to type the email address twice. This helps avoid typos
 in email addresses.</p>
@@ -194,13 +274,28 @@ in email addresses.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<a name="58"></a><h3>Open only</h3>
+<a name="58"></a><p class="title">Open only</p>
 <p>If checked then the &quot;Forgot ticket ID&quot; email (email sent to remind customers of their ticket tracking ID number)
 will only list open tickets and ignore resolved ones.</p>
 
 <p>&nbsp;</p>
 
-<p align="center"><a href="#" onclick="Javascript:window.close()">Close window</a></p
+<p align="center"><a href="#" onclick="Javascript:window.close()">Close window</a></p>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 
 </body>
 
