--- a/pt-BR/help_files/knowledgebase.html
+++ b/pt-BR/help_files/knowledgebase.html
@@ -7,26 +7,45 @@
 </head>
 <body>
 
-<!-- next: 60 -->
+<!-- next: 61 -->
 
-<h2>Interactive help for Hesk settings</h2>
+<h3>Interactive help for Hesk settings</h3>
 
 <p>&nbsp;</p>
 
-<h3>Knowledgebase settings</h3>
+<span class="section">&raquo; Knowledgebase settings</span>
 
-<a name="22"></a><h4>Knowledgebase (KB)</h4>
-<p>Set to ON to enable knowledgebase or to OFF to disable it. Knowledgebase is a categorized collection of answers to frequently asked questions (FAQ) and articles.<br />
-<span class="correct"><b>TIP:</b></span> A comprehensive, well written and organized knowledgebase is a great self help resource for your customers. Taking time to write and maintain
-knowledgebase articles can save you a lot of time and drastically reduce the number of support tickets you receive in the future! It also helps your customers
-solve problems quickly without having to wait for your reply.</p>
+<p>&nbsp;</p>
 
-<a name="52"></a><h4>WYSIWYG Editor</h4>
+<a name="22"></a><p class="title">Enable Knowledgebase</p>
+<p>Use this setting to turn HESK Knowledgebase functionality on or off.</p>
+<p>Available options are:</p>
+
+<ul>
+<li><i>YES, enable Knowledgebase</i><br />Enables Knowledgebase functionality for HESK<br />&nbsp;</li>
+<li><i>YES, use HESK as a Knowledgebase only (disable help desk)</i><br />Enables Knowledgebase, but disables help desk functionality (posting new support tickets). Use
+this option if you wish to use HESK as a Knowledgebase, not a fully-featured help desk.<br ><br />
+Note that support tickets may still be submitted by staff or by email piping/POP3 fetching if enabled. Customers can view and reply to tickets.<br />&nbsp;</li>
+<li><i>NO, disable Knowledgebase</i><br />Disables Knowledgebase functionality for HESK</li>
+</ul>
+
+<p>&nbsp;</p>
+
+<p align="center"><a href="#" onclick="Javascript:window.close()">Close window</a></p>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<a name="52"></a><p class="title">WYSIWYG Editor</p>
 <p>This will enable a <i>What You See Is What You Get</i> type
 editor (a rich-text editor) for the knowledgebase articles rather than a simple
 text editor.</p>
 
-<a name="23"></a><h4>Suggest KB articles</h4>
+<a name="23"></a><p class="title">Suggest KB articles</p>
 <p>If set to YES Hesk will match ticket subject and message against knowledgebase articles and recommend customers to read matching articles before submitting a new support ticket.</p>
 
 <p>&nbsp;</p>
@@ -35,10 +54,10 @@ text editor.</p>
 
 <p>&nbsp;</p>
 
-<a name="24"></a><h4>Enable KB rating</h4>
+<a name="24"></a><p class="title">Enable KB rating</p>
 <p>Set to YES to allow customers to rate knowledgebase articles as Helpful or Not helpful</p>
 
-<a name="25"></a><h4>Enable KB search</h4>
+<a name="25"></a><p class="title">Enable KB search</p>
 <p>Enabling this feature will show a search form on top of help desk customer interface and allow them to use the search form to search your knowledgebase.</p>
 
 <p>You can choose to display a small search box (located in the top right corner) or a large one (more visible, covers entire page width).</p>
@@ -49,10 +68,10 @@ text editor.</p>
 
 <p>&nbsp;</p>
 
-<a name="58"></a><h4>Show article views</h4>
+<a name="58"></a><p class="title">Show article views</p>
 <p>Set to YES to display number of knowledgebase article views publicly (views are always visible from staff control panel).</p>
 
-<a name="59"></a><h4>Show article date</h4>
+<a name="59"></a><p class="title">Show article date</p>
 <p>Set to YES to display knowledgebase article submission date publicly (date is always visible from staff control panel).</p>
 
 <p>&nbsp;</p>
@@ -61,10 +80,10 @@ text editor.</p>
 
 <p>&nbsp;</p>
 
-<a name="26"></a><h4>Max search results</h4>
+<a name="26"></a><p class="title">Max search results</p>
 <p>This is the maximum matching results Hesk will return when someone searches the knowledgebase.</p>
 
-<a name="27"></a><h4>Article preview length</h4>
+<a name="27"></a><p class="title">Article preview length</p>
 <p>Maximum length (number of chars) of knowledgebase article content that will be displayed in article list when browsing knowledgebase categories.</p>
 
 <p>&nbsp;</p>
@@ -73,10 +92,10 @@ text editor.</p>
 
 <p>&nbsp;</p>
 
-<a name="28"></a><h4>Categories in row</h4>
+<a name="28"></a><p class="title">Categories in row</p>
 <p>Number of (sub)categories to be displayed in table row when browsing knowledgebase.</p>
 
-<a name="29"></a><h4>Subcategory articles</h4>
+<a name="29"></a><p class="title">Subcategory articles</p>
 <p>Number of (preview) articles listed in subcategory display.</p>
 
 <p>&nbsp;</p>
@@ -85,15 +104,44 @@ text editor.</p>
 
 <p>&nbsp;</p>
 
-<a name="30"></a><h4>Show popular articles</h4>
-<p>Number of popular (most visited) articles shown on <a href="../" target="_blank">help desk index</a> and <a href="../knowledgebase.php" target="_blank">knowledgebase index</a> pages. Set to 0 to disable listing popular articles.</p>
+<a name="30"></a><p class="title">Show popular articles</p>
+<p>Number of popular (most visited) articles shown on <a href="../../../" target="_blank">help desk index</a> and <a href="../../../knowledgebase.php" target="_blank">knowledgebase index</a> pages. Set to 0 to disable listing popular articles.</p>
 
-<a name="31"></a><h4>Show latest articles</h4>
-<p>Number of latest (most recently submitted) articles shown on <a href="../" target="_blank">help desk index</a> and <a href="../knowledgebase.php" target="_blank">knowledgebase index</a> pages. Set to 0 to disable listing latest articles.</p>
+<a name="31"></a><p class="title">Show latest articles</p>
+<p>Number of latest (most recently submitted) articles shown on <a href="../../../" target="_blank">help desk index</a> and <a href="../../../knowledgebase.php" target="_blank">knowledgebase index</a> pages. Set to 0 to disable listing latest articles.</p>
 
 <p>&nbsp;</p>
 
 <p align="center"><a href="#" onclick="Javascript:window.close()">Close window</a></p>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<a name="60"></a><p class="title">Related Articles</p>
+<p>Set to the number of related articles that should be listed below each Knowledgebase article.</p>
+
+<p>To disable listing related articles, set to <b>0</b></p>
+
+<p>&nbsp;</p>
+
+<p align="center"><a href="#" onclick="Javascript:window.close()">Close window</a></p>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 
 </body>
 
