Voltando os arquivos do MfH

--- a/pt-BR/help_files/misc.html
+++ b/pt-BR/help_files/misc.html
@@ -7,20 +7,20 @@
 </head>
 <body>
 
-<!-- next: 63 -->
+<!-- next: 60 -->
 
-<h3>Interactive help for Hesk settings</h3>
+<h2>Interactive help for Hesk settings</h2>
 
 <p>&nbsp;</p>
 
-<a name="18"></a><p class="title">Server time offset</p>
+<a name="18"></a><h4>Server time offset</h4>
 <p>If your server time differs from your local time you can set the time difference here. Examples:<br />
 server time: 12:30, local time: 13:30, set hours to <b>1</b> and minutes to <b>0</b><br />
 server time: 12:30, local time: 14:45, set hours to <b>2</b> and minutes to <b>15</b><br />
 server time: 12:30, local time: 09:30, set hours to <b>-3</b> and minutes to <b>0</b><br />
 server time: 12:30, local time: 11:00, set hours to <b>-1</b> and minutes to <b>-30</b></p>
 
-<a name="19"></a><p class="title">Daylight saving</p>
+<a name="19"></a><h4>Daylight saving</h4>
 <p>ON if your country uses daylight saving time. Set to OFF to disable daylight saving time.</p>
 
 <p>Do NOT turn this on if your server already adjusts for daylight saving time!</p>
@@ -31,7 +31,7 @@ server time: 12:30, local time: 11:00, set hours to <b>-1</b> and minutes to <b>
 
 <p>&nbsp;</p>
 
-<a name="20"></a><p class="title">Time format</p>
+<a name="20"></a><h4>Time format</h4>
 <p>This is PHP date syntax for timestamps displayed by Hesk.</p>
 
 <p><span class="wrong">Use only one space in the syntax (separating date and time), Hesk will use the space to break date and time into two lines!</span></p>
@@ -71,40 +71,10 @@ server time: 12:30, local time: 11:00, set hours to <b>-1</b> and minutes to <b>
 
 <p>&nbsp;</p>
 
-<a name="61"></a><p class="title">IP whois</p>
-<p>URL of the service you use for IP whois query.</p>
-<p><b>{IP}</b> tag will be replaced with customer IP address.</p>
-<p>Default: http://whois.domaintools.com/{IP}</p>
+<a name="21"></a><h4>Admin link</h4>
+<p>If selected a link to admin panel will be displayed on the bottom of your <a href="../" target="_blank">help desk index page</a>.</p>
 
-<p>&nbsp;</p>
-
-<p align="center"><a href="#" onclick="Javascript:window.close()">Close window</a></p>
-
-<p>&nbsp;</p>
-
-<a name="62"></a><p class="title">Maintenance mode</p>
-<p>Put the help desk in maintenance mode.</p>
-<p>Customer will not be able to use any help desk functions. Staff will be able to access and use the help desk normally.</p>
-<p><b>Note:</b> Maintenance mode is activated automatically if the <b>/install</b> folder is present.</p>
-<p><b>Important:</b> POP3 fetching will not be active, but email piping will (to avoid lost customer emails).</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p align="center"><a href="#" onclick="Javascript:window.close()">Close window</a></p>
-
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-
-
-<a name="21"></a><p class="title">Admin link</p>
-<p>If selected a link to admin panel will be displayed on the bottom of your <a href="../../../" target="_blank">help desk index page</a>.</p>
-
-<a name="48"></a><p class="title">Submit notice</p>
+<a name="48"></a><h4>Submit notice</h4>
 <p>If checked, the <i>Submit a ticket</i> form will show a note (at the bottom)
 saying the customer should double-check all the information entered and
 that their IP address is being logged for security purposes.</p>
@@ -115,34 +85,17 @@ that their IP address is being logged for security purposes.</p>
 
 <p>&nbsp;</p>
 
-<a name="56"></a><p class="title">Online Users</p>
+<a name="56"></a><h4>Online Users</h4>
 <p>If checked HESK will show a list of users online in the last X minutes at the bottom of the help desk (in staff interface only).</p>
 
-<a name="59"></a><p class="title">Updates</p>
+<a name="59"></a><h4>Updates</h4>
 <p>If checked HESK will automatically check for updates whenever you open the settings page.</p>
 <p>For automatic update check to work your server must be connected to the Internet and have either cURL or allow_url_fopen enabled.</p>
 <p>If disabled or required functions are missing, a manual &quot;Check for updates&quot; links will appear.</p>
 
 <p>&nbsp;</p>
 
-<p>&nbsp;</p>
-
 <p align="center"><a href="#" onclick="Javascript:window.close()">Close window</a></p>
-
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
 
 </body>
 
