--- a/pt-BR/help_files/general.html
+++ b/pt-BR/help_files/general.html
@@ -9,17 +9,17 @@
 
 <!-- next: 58 -->
 
-<h3>Interactive help for Hesk settings</h3>
+<h2>Interactive help for Hesk settings</h2>
 
 <p>&nbsp;</p>
 
-<span class="section">&raquo; General settings</span>
+<h3>General settings</h3>
 
-<a name="1"></a><p class="title">Website title</p>
+<a name="1"></a><h4>Website title</h4>
 <p>A short title of your website, for example &quot;My lovely website&quot;. This will be used as the title of the link that is displayed in the top left corner of the customer interface to enable them to return to your website.</p>
 
-<a name="2"></a><p class="title">Website URL</p>
-<p>URL of your website, for example &quot;http://www.example.com&quot;. Make sure this is a valid URL and you start it with either http:// or https:// . This will be used as the URL of the link that is be displayed in top left corner of customer interface and enable them to return to your website.</p>
+<a name="2"></a><h4>Website URL</h4>
+<p>URL of your website, for example &quot;http://www.yourwebsite.com&quot;. Make sure this is a valid URL and you start it with either http:// or https:// . This will be used as the URL of the link that is be displayed in top left corner of customer interface and enable them to return to your website.</p>
 
 <p>&nbsp;</p>
 
@@ -27,7 +27,7 @@
 
 <p>&nbsp;</p>
 
-<a name="4"></a><p class="title">Webmaster email</p>
+<a name="4"></a><h4>Webmaster email</h4>
 <p>Default webmaster email address. Make sure you enter a valid email address, it can be the same as Support email.</p>
 
 <p>&nbsp;</p>
@@ -36,10 +36,10 @@
 
 <p>&nbsp;</p>
 
-<a name="5"></a><p class="title">&quot;From:&quot; email</p>
+<a name="5"></a><h4>&quot;From:&quot; email</h4>
 <p>Your &quot;From:&quot; email address. This is the email address that will be shown as email sender (From: header) in all emails sent by HESK. Usually it is an email you don't read and don't reply to. Make sure you enter a valid email address, it can be the same as Support email but it is recommended to use a different one.</p>
 
-<a name="6"></a><p class="title">&quot;From:&quot; name</p>
+<a name="6"></a><h4>&quot;From:&quot; name</h4>
 <p>This is the name that will be shown as email sender (From:) in all emails sent by HESK. If no name is set the email From: header will only show your From: email address.</p>
 
 <p>&nbsp;</p>
@@ -48,9 +48,9 @@
 
 <p>&nbsp;</p>
 
-<span class="section">&raquo; Language settings</span>
+<h3>Language settings</h3>
 
-<a name="9"></a><p class="title">Default Language</p>
+<a name="9"></a><h4>Default Language</h4>
 <p>If you have several languages installed for Hesk this will be the default language. All properly installed languages are displayed in the drop-down box. Please refer to the readme.html file for instructions on how to install more languages. The &quot;Test language folder&quot; link will help you troubleshoot non-working language installations.</p>
 
 <!--
@@ -58,7 +58,7 @@
 -->
 <p>If multiple languages are enabled you can set your preferred language on the &quot;Profile&quot; page.</p>
 
-<a name="43"></a><p class="title">Multiple languages</p>
+<a name="43"></a><h4>Multiple languages</h4>
 <p>Enabling this setting will allow your users and staff to choose their preferred language from the list of installed languages. Do not enable this feature unless you provide support in all of the installed languages!</p>
 
 <p>&nbsp;</p>
@@ -67,15 +67,15 @@
 
 <p>&nbsp;</p>
 
-<span class="section">&raquo; Database settings</span>
+<h3>Database settings</h3>
 
-<a name="32"></a><p class="title">Database host</p>
+<a name="32"></a><h4>Database host</h4>
 <p>Database host server, &quot;localhost&quot; works for most users. Do NOT change this unless you know what your MySQL host is. Ask your hosting company if not sure or if you are having problems connecting to the MySQL database.</p>
 
-<a name="33"></a><p class="title">Database name</p>
+<a name="33"></a><h4>Database name</h4>
 <p>The name of your MySQL database. You should create one in your web hosting control panel or ask your hosting company for this info.</p>
 
-<a name="34"></a><p class="title">Database username</p>
+<a name="34"></a><h4>Database username</h4>
 <p>The username you use to connect to your MySQL database. You should create a MySQL user in your web hosting control panel or ask your hosting company for this info</p>
 
 <p>&nbsp;</p>
@@ -84,31 +84,16 @@
 
 <p>&nbsp;</p>
 
-<a name="35"></a><p class="title">Database password</p>
+<a name="35"></a><h4>Database password</h4>
 <p>The password you use to connect to MySQL database. You should create a MySQL user in your web hosting control panel or ask your hosting company for this info</p>
 
-<a name="36"></a><p class="title">Table prefix</p>
+<a name="36"></a><h4>Table prefix</h4>
 <p>The prefix that will be added to all table names. If set to <b>hesk_</b> table &quot;users&quot; will actually be named &quot;hesk_users&quot; in your database.
 This is useful if you want to run multiple installs of Hesk using one MySQL database, just give each install a unique table prefix name (hesk1_, hesk2_, hesk3_, ...)</p>
 
 <p>&nbsp;</p>
 
 <p align="center"><a href="#" onclick="Javascript:window.close()">Close window</a></p>
-
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
 
 </body>
 
